# learningOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: CMakeLists.txt
engine/include/: oglObject.h  openGL.h  shader.h  stb_image.h  texture.h  window.h
engine/src/: oglObject.cpp  openGL.cpp  shader.cpp  texture.cpp  window.cpp
glad/: CMakeLists.txt
glad/include/KHR/: khrplatform.h
glad/include/glad/: glad.h
glad/src/: glad.c
resource/: vertex.shader
